// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`render Checkbox checked 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<input
  aria-checked="true"
  aria-labelledby=":r1:"
  checked=""
  class="c0"
  id=":r0:"
  type="checkbox"
/>
`;

exports[`render Checkbox disabled checked 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<input
  aria-checked="true"
  aria-labelledby=":rj:"
  checked=""
  class="c0"
  disabled=""
  id=":ri:"
  type="checkbox"
/>
`;

exports[`render Checkbox disabled indeterminate 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<input
  aria-labelledby=":rp:"
  class="c0"
  disabled=""
  id=":ro:"
  type="checkbox"
/>
`;

exports[`render Checkbox disabled unchecked 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<input
  aria-checked="false"
  aria-labelledby=":rm:"
  class="c0"
  disabled=""
  id=":rl:"
  type="checkbox"
/>
`;

exports[`render Checkbox indeterminate 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<input
  aria-labelledby=":rg:"
  class="c0"
  id=":rf:"
  type="checkbox"
/>
`;

exports[`render Checkbox unchecked 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<input
  aria-checked="false"
  aria-labelledby=":r4:"
  class="c0"
  id=":r3:"
  type="checkbox"
/>
`;

exports[`render Checkbox with description object 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<input
  aria-checked="false"
  aria-labelledby=":r7:"
  class="c0"
  id=":r6:"
  name="test-group"
  type="checkbox"
/>
`;

exports[`render Checkbox with description string 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<input
  aria-checked="false"
  aria-labelledby=":rd:"
  class="c0"
  id=":rc:"
  name="test-group"
  type="checkbox"
/>
`;
